--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>VanoSxc</title>
+    <title>S4zuHost</title>
     <meta content="S4zu C2-Api" name="description">
     <meta content="plans ddos,vps,api ddos" name="keywords">
     <link href="https://pixhost.to/show/530/525660560_designer.jpg" rel="icon">
