--- a/index.html
+++ b/index.html
@@ -1,376 +1,149 @@
 <!DOCTYPE html>
- <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width,initial-scale=1" name="viewport">
-    <title>S4zuHost</title>
-    <meta content="S4zu C2-Api" name="description">
-    <meta content="plans ddos,vps,api ddos" name="keywords">
-    <link href="https://pixhost.to/show/530/525660560_designer.jpg" rel="icon">
-    <link href="https://pixhost.to/show/128/520511526_aesthetic-anime-profile-pictures-act70lmrgm5gxgbk.jpg" rel="apple-touch-icon">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/aos/aos.css" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/remixicon/remixicon.css" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/swiper/swiper-bundle.min.css" rel="stylesheet">
-    <link href="https://api.zeeoneofc.my.id/css/style.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="https://pixhost.to/show/530/525660560_designer.jpg">
-  </head>
-  <body>
-    <header id="header" class="fixed-top d-flex align-items-center header-transparent">
-      <div class="container d-flex align-items-center justify-content-between">
-        <div class="logo">
-          <h1>
-            <a href="#">
-              <span>S4zuSxc</span>
-            </a>
-          </h1>
-        </div>
-      </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Website Keren untuk Hosting">
+    <meta name="author" content="Sazuu">
+    <title>Website Keren</title>
+    <style>
+        /* Reset dasar */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            background: linear-gradient(to bottom, #1a1a2e, #16213e);
+            color: #f5f5f5;
+        }
+
+        header {
+            background: #0f3460;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        header p {
+            font-size: 1rem;
+            color: #ccc;
+        }
+
+        .hero {
+            text-align: center;
+            padding: 4rem 1rem;
+        }
+
+        .hero h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .btn {
+            display: inline-block;
+            background: #e94560;
+            color: #fff;
+            text-decoration: none;
+            padding: 0.8rem 2rem;
+            border-radius: 25px;
+            transition: background 0.3s ease-in-out;
+        }
+
+        .btn:hover {
+            background: #f05d7a;
+        }
+
+        .features {
+            display: flex;
+            justify-content: space-around;
+            padding: 2rem 1rem;
+            flex-wrap: wrap;
+        }
+
+        .feature {
+            background: #1a1a2e;
+            padding: 1.5rem;
+            margin: 1rem;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            width: 300px;
+        }
+
+        .feature h3 {
+            margin-bottom: 1rem;
+            font-size: 1.5rem;
+        }
+
+        .feature p {
+            font-size: 1rem;
+            color: #bbb;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem;
+            background: #0f3460;
+            color: #ccc;
+            margin-top: 2rem;
+            font-size: 0.9rem;
+        }
+
+        footer a {
+            color: #e94560;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Website Hosting Keren</h1>
+        <p>Tempat sempurna untuk memulai perjalanan online Anda</p>
     </header>
-    <section id="hero">
-      <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
-            <div data-aos="zoom-out">
-              <h1>Welcome To <span>S4zuSxc Shop</span></h1>
-              <h2>Menyediakan beberapa layanan Service Website</h2>
-              <div class="text-center text-lg-start">
-                <a href="#pricing" class="btn-get-started">Lihat Produk S4zuSxc</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
-            <img src="https://www.linkpicture.com/q/hero-img_2.png" class="img-fluid animated" alt="">
-          </div>
-        </div>
-      </div>
-      <svg class="hero-waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28 " preserveAspectRatio="none">
-        <defs>
-          <path id="wave-path" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
-        </defs>
-        <g class="wave1">
-          <use xlink:href="#wave-path" x="50" y="3" fill="rgba(255,255,255, .1)"></use>
-        </g>
-        <g class="wave2">
-          <use xlink:href="#wave-path" x="50" y="0" fill="rgba(255,255,255, .2)"></use>
-        </g>
-        <g class="wave3">
-          <use xlink:href="#wave-path" x="50" y="9" fill="#fff"></use>
-        </g>
-      </svg>
+
+    <section class="hero">
+        <h2>Selamat Datang di Website Keren!</h2>
+        <p>Kami menyediakan layanan hosting terbaik dengan desain modern dan fitur lengkap untuk memenuhi kebutuhan Anda.</p>
+        <a href="#features" class="btn">Jelajahi Fitur</a>
     </section>
-    <section id="pricing" class="pricing">
-      <div class="container">
-        <div class="section-title" data-aos="fade-up">
-          <center><p>List Jualan</p></center>
+
+    <section id="features" class="features">
+        <div class="feature">
+            <h3>Kecepatan Tinggi</h3>
+            <p>Server kami dirancang untuk memastikan situs Anda selalu cepat dan responsif.</p>
         </div>
-        <div class="row" data-aos="fade-left">
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Basic Plans V1</h3>
-              <h4><sup>Rp</sup>50K/$3,40<span></span></h4>
-              <ul>
-                <li>Description :</li>
-                <li>1 Week</li>
-                <li>Concurent 1</li>
-                <li>Time Limit 60s</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Basic Plans V2</h3>
-              <h4><sup>Rp</sup>100K/$6,70<span></span></h4>
-              <ul>
-                <li>Description :</li>
-                <li>2 Week ✅</li>
-                <li>Concurent 2</li>
-                <li>Time Limit 120s</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
-              <h3>Basic Plans 3</h3>
-              <h4><sup>Rp</sup>150K/$10,44<span></span></h4>
-              <ul>
-                <li>Description :</li>
-                <li>3 Week</li>
-                <li>Concurent 3</li>
-                <li>Time Limit 140s</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="300">
-              <h3>Plans Basic 4</h3>
-              <h4><sup>Rp</sup>200K/$13,70<span></span></h4>
-              <ul>
-                <li>Description :</li>
-                <li>4 Week</li>
-                <li>Concurent 4</li>
-                <li>Time Limit 180s</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="300">
-              <h3>VIP Plans V1</h3>
-              <h4><sup>Rp</sup>250K/$16,64<span></span></h4>
-              <ul>
-                <li>Description :</li>
-                <li>5 Week</li>
-                <li>Concurent 6</li>
-                <li>Time Limit 200s</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
+        <div class="feature">
+            <h3>Keamanan Terbaik</h3>
+            <p>Data Anda aman dengan teknologi enkripsi terbaru dan perlindungan dari ancaman siber.</p>
         </div>
-      </div>
-      <div class="container">
-        <div class="section-title" data-aos="fade-up">
-          <center><p>VPS DIGITAL OCEANT</p></center>
-        <div class="row" data-aos="fade-left">
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
-              <h3>RAM 2GB</h3>
-              <h4><sup>Rp</sup>22K<span></span></h4>
-              <ul>
-                <li>2GB RAM</li>
-                <li>Core 1</li>
-                <li>Garansi 15Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
-              <h3>RAM 2GB</h3>
-              <h4><sup>Rp</sup>27K<span></span></h4>
-              <ul>
-                <li>2GB RAM</li>
-                <li>Core 2</li>
-                <li>Garansi 15Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="300">
-              <h3>RAM 4GB</h3>
-              <h4><sup>Rp</sup>37K<span></span></h4>
-              <ul>
-                <li>4GB RAM</li>
-                <li>Core 4</li>
-                <li>Garansi 15Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="400">
-              <h3>RAM 8GB</h3>
-              <h4><sup>Rp</sup>47K<span></span></h4>
-              <ul>
-                <li>8GB RAM</li>
-                <li>Core 4</li>
-                <li>Garansi 15Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-              <h3>RAM 16GB</h3>
-              <h4><sup>Rp</sup>62K<span></span></h4>
-              <ul>
-                <li>16GB RAM</li>
-                <li>Core 4</li>
-                <li>Garansi 15Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-              <h3>Api Plans V1</h3>
-              <h4><sup>Rp</sup>15K<span></span></h4>
-              <ul>
-                <li>1 Week</li>
-                <li>On 24Jam</li>
-                <li>No Lemot</li>
-                <li>Garansi 7Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-              <h3>Api Plans V2</h3>
-              <h4><sup>Rp</sup>25K<span></span></h4>
-              <ul>
-                <li>3 Week</li>
-                <li>On 24Jam</li>
-                <li>No Lemot</li>
-                <li>Garansi 7Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-              <h3>Api Plans V3</h3>
-              <h4><sup>Rp</sup>30K<span></span></h4>
-              <ul>
-                <li>5 Week</li>
-                <li>On 24Jam/li>
-                <li>No Lemot</li>
-                <li>Garansi 7Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-              <h3>Api Plans V4</h3>
-              <h4><sup>Rp</sup>45K<span></span></h4>
-              <ul>
-                <li>10 Week</li>
-                <li>On 24Jam</li>
-                <li>No Lemot</li>
-                <li>Garansi 7Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-              <h3>Api Plans V5</h3>
-              <h4><sup>Rp</sup>55K<span></span></h4>
-              <ul>
-                <li>1 Month</li>
-                <li>On 24Jam</li>
-                <li>No Lemot</li>
-                <li>Garansi 7Days</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-         </div>
-        <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="600">
-            <span class="advanced">Recommend</span>
-              <h3>Api Plans V6</h3>
-              <h4><sup>Rp</sup>1,5JT<span></span></h4>
-              <ul>
-                <li>Perma Acces</li>
-                <li>On 24Jam</li>
-                <li>No Delay</li>
-                <li>Garansi 7Days</li>
-                <li>Free Update</li>
-              </ul>
-              <div class="btn-wrap">
-                <a href="https://t.me/VS4zu*" class="btn-buy">BELI</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
-            <div class="box featured" data-aos="zoom-in" data-aos-delay="500">
-            <div class="info">
-              <div class="address">
-                <i class="fa-solid fa-location-dot"></i>
-                <h4>Location:</h4>
-                <p>East Java, Indonesian</p>
-              </div>
-              <div class="email">
-                <i class="fa-solid fa-envelope"></i>
-                <h4>Email:</h4>
-                <p>abyzzhard23@gmail.com</p>
-              </div>
-              <div class="phone">
-                <i class="fa-solid fa-phone"></i>
-                <h4>Contact:</h4>
-                <p>https://t.me/VS4zu</p>
-                <p>https://t.me/XyyTenzz</p>
-              </div>
-            </div>
-          </div>
+        <div class="feature">
+            <h3>Dukungan 24/7</h3>
+            <p>Tim dukungan kami selalu siap membantu kapan pun Anda membutuhkan.</p>
         </div>
-      </div>
     </section>
-  </main>
-  <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <div class="footer-info">
-              <h3>S4zuSxc</h3>
-              <p class="pb-3"><em></em></p>
-              <p>East Java,<br>Indonesian<br><br><strong>Phone:</strong> t.me/VS4zu<br><strong>Email:</strong> abyzzhard23@gmail.com<br></p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Thans For</h4>
-            <p>S4zuSxc</p>
-            <p>NetNinja C2-Api</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="copyright">&copy; Copyright <strong><span>S4zuSxc </span></strong>. All Rights Reserved</div>
-      <div class="credits">Designed by <a href="https://instagram/@faxxgg17">S4zuSxc</a></div>
-    </div>
-  </footer>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="fa-solid fa-arrow-up"></i></a>
-  <div id="preloader"></div>
-  <script data-cfasync="false" src="https://api.zeeoneofc.my.id/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
-  <script src="https://api.zeeoneofc.my.id/purecounter/purecounter_vanilla.js"></script>
-  <script src="https://api.zeeoneofc.my.id/aos/aos.js"></script>
-  <script src="https://api.zeeoneofc.my.id/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://api.zeeoneofc.my.id/glightbox/js/glightbox.min.js"></script>
-  <script src="https://api.zeeoneofc.my.id/swiper/swiper-bundle.min.js"></script>
-  <script src="https://api.zeeoneofc.my.id/js/main.min.js"></script>
-  <script src="https://api.zeeoneofc.my.id/js/dashboard.js"></script>
-  <script src="https://kit.fontawesome.com/32db8fe470.js" crossorigin="anonymous"></script>
-  </body>
-</html>
+
+    <footer>
+        <p>© 2024 Website Keren. Dibuat dengan ❤️ oleh <a href="https://github.com/sazuu" target="_blank">Sazuu</a></p>
+    </footer>
+</body>
+     </html>
+     
